--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.17.3",
     "axios": "^1.7.0",
     "bootstrap": "^5.3.3",
+    "client": "file:",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
@@ -25,6 +26,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.15.1",
+    "tippy.js": "^6.3.7",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
