--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.2.3",
     "nodemon": "^2.0.22",
+    "project-room": "file:",
     "xlsx": "^0.18.5"
   }
 }
