--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,12 @@
 PORT =8000
 
-DB_HOST=localhost
+DB_HOST=localhost    
 DB_USER=root
 DB_PASS=Zx0830248638za
 DB_DATABASE=classroom-reservation-system
 
 JWT_SECRET=jwtSecret
+
+
+# DB_HOST=db 
+DB_PORT=3306   
