Your commit message

--- a/server/.env
+++ b/server/.env
@@ -1,12 +1,17 @@
 PORT =8000
 
-DB_HOST=localhost    
+#บน Server 
+DB_HOST=db 
+#ในเครื่องเรา localhost
+#DB_HOST=localhost
+
 DB_USER=root
 DB_PASS=Zx0830248638za
 DB_DATABASE=classroom-reservation-system
+DB_PORT=3306 
 
 JWT_SECRET=jwtSecret
 
 
-# DB_HOST=db 
-DB_PORT=3306   
+
+  
